<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="LoginViewModel"
            type="com.example.livedata.LoginViewModel"
            />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_md"
        tools:context=".View.MainActivity"
        >

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/e_mail_address_field_placeholder"
            android:inputType="textEmailAddress"
            android:text="@={LoginViewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword"
            android:text="@={LoginViewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress"
            tools:targetApi="o"
            />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:onClick="@{() -> LoginViewModel.onClick()}"
            android:text="@string/login_button_text"
            android:textSize="@dimen/text_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            />

        <TextView
            android:id="@+id/resultsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_sm"
            android:layout_marginTop="@dimen/spacing_xlg"
            android:layout_marginEnd="@dimen/spacing_sm"
            android:gravity="center"
            android:text="@string/live_data_results_title"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/text_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            />

        <TextView
            android:id="@+id/resultEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/place_holder_text"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/text_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultsTitle"
            />

        <TextView
            android:id="@+id/resultPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/place_holder_text"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/text_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultEmailAddress"
            />

    </android.support.constraint.ConstraintLayout>
</layout>
